docs: restructure README and fix settings window sizing
Streamline the landing docs for end users, move packaging into CONTRIBUTING, and size the settings window to content height so controls are not clipped.